openwebrx (1.2.66) bullseye jammy; urgency=low

  * Added bookmark option to enable/disable scanning.
  * SSB, CW, AM, SAM, and NFM bookmarks are scanned by default.
  * Fixed crashes when disconnecting clients.

 -- Marat Fayzullin <luarvique@gmail.com>  Wed, 14 Aug 2024 16:12:00 +0000

openwebrx (1.2.65) bullseye jammy; urgency=low

  * Added MQTT reporting of server startup / shutdown.
  * Added MQTT reporting of client connections.
  * Added MQTT reporting of chat messages.
  * Added reporting for raw AX25 data [rassware].
  * Stated max panorama / avatar image sizes [jordank195].
  * Made "Files" page compatible with reverse proxy [413137366].

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 5 Aug 2024 16:12:00 +0000

openwebrx (1.2.64) bullseye jammy; urgency=low

  * Added support for HDRadio (NRSC5) digital FM radio.
  * Now requiring CSDR version 0.18.24.
  * Fixed some HFDL bookmarks.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 15 Jul 2024 16:12:00 +0000

openwebrx (1.2.63) bullseye jammy; urgency=low

  * Fixed crash in the FLEX decoder.
  * Fixed crash in the EAS decoder.
  * Fixed rounding error when editing bookmarks.
  * Fixed suffix when entering bookmark in Hz.
  * Now defaulting new bookmarks to kHz.
  * Reduced number of GPS updates and logging.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 8 Jul 2024 16:12:00 +0000

openwebrx (1.2.62) bullseye jammy; urgency=low

  * Added 24kHz DATA mode for the starving masses.
  * Added optional descriptions to bookmarks.
  * Added station descriptions to EIBI bookmarks.
  * Added repeater descriptions to RepeaterBook bookmarks.
  * Changed some messages from DEBUG to INFO and ERROR.
  * Renamed Zoran's theme to Blue Ocean.
  * Polling GPS every 5 minutes now.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 1 Jul 2024 16:12:00 +0000

openwebrx (1.2.61) bullseye jammy; urgency=low

  * Added Multimon-based EAS decoder by Matthew McDougal.
  * Added separate, selectable bandplans for ITU regions.